// The MIT License (MIT)

// Copyright (c) 2023 GateHub Limited

// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:

// The above copyright notice and this permission notice shall be included in all
// copies or substantial portions of the Software.

// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
// SOFTWARE.

syntax = "proto3";

package proto;

option go_package="github.com/GateHubNet/data-api-go/internal/pb";

message DailyLedger {
  /*
   * Day when this ledger was closed. YYYY-mm-dd format
   */
  string ledger_close_day = 1 [json_name='ledger_close_day']; //@gotags: cql:"ledger_close_day"

  /*
   * The Ledger Index of this ledger.
   */
  int64 ledger_index = 2 [json_name='ledger_index']; // @gotags: cql:"ledger_index"

  /*
   * The time this ledger was closed, in seconds since the Ripple Epoch
   */
  int64 close_time = 3 [json_name='close_time']; // @gotags: cql:"close_time"
}